Bug 140494 - capacity auto-detection does not work
Summary: capacity auto-detection does not work
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-23 14:46 UTC by Maciej Pilichowski
Modified: 2007-01-23 15:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2007-01-23 14:46:13 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    SuSE RPMs

This is a fork of:
http://bugs.kde.org/show_bug.cgi?id=140444

I put here again the facts:
External usb burner, the CDRW disc with normal data inserted, capacity auto-detection turned on, the disc is 650, but k3b shows still 700MB as a capacity indicator.

From the reply in the original report I guess what is going on -- k3b detects the disc is not recordable (it contains) data and does not check if the disc is _erasable_. And in fact it is -- so it is perfectly ok, to erase it and burn again.
Comment 1 Sebastian Trueg 2007-01-23 15:06:22 UTC
found this comment in my code. Sadly I do not really know what I mean by that. 
Stupid short comments!

// FIXME: unless we do not know the real capacity of CD-RW media we can only
// use empty here

I will look into it.
Comment 2 Sebastian Trueg 2007-01-23 15:11:45 UTC
SVN commit 626495 by trueg:

Since my comment is way to short and I cannot understand the reason anymore I just removed it
and with it added support for CD-RW for auto project size detection.

This should be a reminder for me to write proper comments. ;)

BUG: 140494


 M  +1 -4      k3bfillstatusdisplay.cpp  


--- trunk/extragear/multimedia/k3b/src/projects/k3bfillstatusdisplay.cpp #626494:626495
@@ -672,9 +672,6 @@
 
     // TODO: once we have only one data project we need to change this to handle both
 
-    // FIXME: unless we do not know the real capacity of CD-RW media we can only use
-    //        empty here
-
     K3bDevice::Device* dev = 0;
     QPtrList<K3bDevice::Device> devs;
     if( d->showDvdSizes )
@@ -687,7 +684,7 @@
 
       if( ( medium.diskInfo().empty() || 
 	    medium.diskInfo().appendable() || 
-	    (medium.diskInfo().rewritable() && medium.diskInfo().isDvdMedia()) ) &&
+	    medium.diskInfo().rewritable() ) &&
 	  ( medium.diskInfo().isDvdMedia() == d->showDvdSizes ) &&
 	  d->doc->length() <= medium.diskInfo().capacity() ) {