Since my comment is way to short and I cannot understand the reason anymore I just removed it and with it added support for CD-RW for auto project size detection.

This should be a reminder for me to write proper comments. ;)

BUG: 140494

svn path=/trunk/extragear/multimedia/k3b/; revision=626495